fix : api upload and guest apply toast
